[gd_scene load_steps=61 format=3 uid="uid://house"]

[ext_resource type="Script" path="res://scripts/scenes/House.gd" id="1_house"]
[ext_resource type="Script" path="res://scripts/player/Player.gd" id="2_player"]
[ext_resource type="Script" path="res://scripts/charlie/Charlie.gd" id="3_charlie"]
[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="4_hud"]
[ext_resource type="Script" path="res://scripts/props/Ball.gd" id="5_ball"]
[ext_resource type="Texture2D" path="res://assets/sprites/characters/player_spritesheet.png" id="6_player_sprite"]
[ext_resource type="Texture2D" path="res://assets/sprites/characters/charlie_spritesheet.png" id="7_charlie_sprite"]
[ext_resource type="Texture2D" path="res://assets/sprites/characters/ball.png" id="8_ball_sprite"]
[ext_resource type="Texture2D" path="res://assets/sprites/characters/ball_spritesheet.png" id="9_ball_spritesheet"]
[ext_resource type="SpriteFrames" path="res://assets/sprites/characters/charlie_sprite_frames.tres" id="10_charlie_frames"]
[ext_resource type="SpriteFrames" path="res://resources/sprites/player_frames.tres" id="11_player_frames"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(16, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_charlie"]
size = Vector2(18, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_ball"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door"]
size = Vector2(60, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_food"]
size = Vector2(36, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bed"]
size = Vector2(56, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_h"]
size = Vector2(426, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_v"]
size = Vector2(16, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kitchen"]
size = Vector2(110, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fridge"]
size = Vector2(22, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_table"]
size = Vector2(90, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_chair"]
size = Vector2(24, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sofa"]
size = Vector2(60, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_basket"]
size = Vector2(64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_down"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_left"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_right"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_up"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_down_1"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_down_2"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_down_3"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_left_1"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_left_2"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_left_3"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_right_1"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_right_2"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_right_3"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_up_1"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_up_2"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_up_3"]
atlas = ExtResource("7_charlie_sprite")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_0"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_1"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_2"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_3"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_4"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_5"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_6"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ball_7"]
atlas = ExtResource("9_ball_spritesheet")
region = Rect2(112, 0, 16, 16)



[sub_resource type="SpriteFrames" id="SpriteFrames_charlie"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_down")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_left")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_right")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_up")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_2")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_2")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_2")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_2")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ball"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ball_sprite")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ball_7")
}],
"loop": true,
"name": &"bounce",
"speed": 12.0
}]

[node name="House" type="Node2D"]
script = ExtResource("1_house")

[node name="Floor" type="ColorRect" parent="."]
offset_top = 50.0
offset_right = 426.0
offset_bottom = 290.0
color = Color(0.6, 0.45, 0.3, 1)

[node name="FloorPattern" type="Node2D" parent="."]

[node name="Plank1" type="ColorRect" parent="FloorPattern"]
offset_top = 80.0
offset_right = 426.0
offset_bottom = 82.0
color = Color(0.55, 0.4, 0.25, 1)

[node name="Plank2" type="ColorRect" parent="FloorPattern"]
offset_top = 120.0
offset_right = 426.0
offset_bottom = 122.0
color = Color(0.55, 0.4, 0.25, 1)

[node name="Plank3" type="ColorRect" parent="FloorPattern"]
offset_top = 160.0
offset_right = 426.0
offset_bottom = 162.0
color = Color(0.55, 0.4, 0.25, 1)

[node name="Plank4" type="ColorRect" parent="FloorPattern"]
offset_top = 200.0
offset_right = 426.0
offset_bottom = 202.0
color = Color(0.55, 0.4, 0.25, 1)

[node name="Plank5" type="ColorRect" parent="FloorPattern"]
offset_top = 240.0
offset_right = 426.0
offset_bottom = 242.0
color = Color(0.55, 0.4, 0.25, 1)

[node name="BackWall" type="ColorRect" parent="."]
offset_right = 426.0
offset_bottom = 50.0
color = Color(0.75, 0.7, 0.6, 1)

[node name="WallTrim" type="ColorRect" parent="."]
offset_top = 48.0
offset_right = 426.0
offset_bottom = 54.0
color = Color(0.5, 0.4, 0.3, 1)

[node name="Walls" type="Node2D" parent="."]

[node name="WallTop" type="StaticBody2D" parent="Walls"]
position = Vector2(213, 52)

[node name="ColorRect" type="ColorRect" parent="Walls/WallTop"]
offset_left = -213.0
offset_top = -4.0
offset_right = 213.0
offset_bottom = 4.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
shape = SubResource("RectangleShape2D_wall_h")

[node name="WallLeft" type="StaticBody2D" parent="Walls"]
position = Vector2(8, 170)

[node name="ColorRect" type="ColorRect" parent="Walls/WallLeft"]
offset_left = -8.0
offset_top = -120.0
offset_right = 8.0
offset_bottom = 120.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
shape = SubResource("RectangleShape2D_wall_v")

[node name="WallRight" type="StaticBody2D" parent="Walls"]
position = Vector2(418, 170)

[node name="ColorRect" type="ColorRect" parent="Walls/WallRight"]
offset_left = -8.0
offset_top = -120.0
offset_right = 8.0
offset_bottom = 120.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRight"]
shape = SubResource("RectangleShape2D_wall_v")

[node name="WallBottom" type="StaticBody2D" parent="Walls"]
position = Vector2(90, 282)

[node name="ColorRect" type="ColorRect" parent="Walls/WallBottom"]
offset_left = -90.0
offset_top = -8.0
offset_right = 90.0
offset_bottom = 8.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallBottom"]
shape = SubResource("RectangleShape2D_wall_h")

[node name="WallBottomRight" type="StaticBody2D" parent="Walls"]
position = Vector2(336, 282)

[node name="ColorRect" type="ColorRect" parent="Walls/WallBottomRight"]
offset_left = -90.0
offset_top = -8.0
offset_right = 90.0
offset_bottom = 8.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallBottomRight"]
shape = SubResource("RectangleShape2D_wall_h")

[node name="Window" type="Node2D" parent="."]
position = Vector2(300, 8)

[node name="Frame" type="ColorRect" parent="Window"]
offset_left = -28.0
offset_top = -4.0
offset_right = 28.0
offset_bottom = 38.0
color = Color(0.35, 0.25, 0.15, 1)

[node name="Glass" type="ColorRect" parent="Window"]
offset_left = -24.0
offset_top = 0.0
offset_right = 24.0
offset_bottom = 34.0
color = Color(0.6, 0.8, 0.95, 1)

[node name="CrossV" type="ColorRect" parent="Window"]
offset_left = -1.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 34.0
color = Color(0.35, 0.25, 0.15, 1)

[node name="CrossH" type="ColorRect" parent="Window"]
offset_left = -24.0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 18.0
color = Color(0.35, 0.25, 0.15, 1)

[node name="Kitchen" type="Node2D" parent="."]
position = Vector2(60, 25)

[node name="Counter" type="ColorRect" parent="Kitchen"]
offset_left = -44.0
offset_top = -20.0
offset_right = 44.0
offset_bottom = 25.0
color = Color(0.45, 0.35, 0.25, 1)

[node name="CounterTop" type="ColorRect" parent="Kitchen"]
offset_left = -44.0
offset_top = -20.0
offset_right = 44.0
offset_bottom = -14.0
color = Color(0.7, 0.65, 0.6, 1)

[node name="Stove" type="ColorRect" parent="Kitchen"]
offset_left = -30.0
offset_top = -16.0
offset_right = -6.0
offset_bottom = 0.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="Burner1" type="ColorRect" parent="Kitchen"]
offset_left = -26.0
offset_top = -12.0
offset_right = -18.0
offset_bottom = -4.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Burner2" type="ColorRect" parent="Kitchen"]
offset_left = -14.0
offset_top = -12.0
offset_right = -6.0
offset_bottom = -4.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Sink" type="ColorRect" parent="Kitchen"]
offset_left = 10.0
offset_top = -14.0
offset_right = 38.0
offset_bottom = 2.0
color = Color(0.6, 0.6, 0.65, 1)

[node name="SinkBasin" type="ColorRect" parent="Kitchen"]
offset_left = 14.0
offset_top = -10.0
offset_right = 34.0
offset_bottom = -2.0
color = Color(0.5, 0.5, 0.55, 1)

[node name="Fridge" type="ColorRect" parent="Kitchen"]
offset_left = -70.0
offset_top = -20.0
offset_right = -48.0
offset_bottom = 25.0
color = Color(0.85, 0.85, 0.88, 1)

[node name="FridgeHandle" type="ColorRect" parent="Kitchen"]
offset_left = -52.0
offset_top = 0.0
offset_right = -50.0
offset_bottom = 15.0
color = Color(0.6, 0.6, 0.6, 1)

[node name="CounterCollision" type="StaticBody2D" parent="Kitchen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kitchen/CounterCollision"]
shape = SubResource("RectangleShape2D_kitchen")

[node name="FridgeCollision" type="StaticBody2D" parent="Kitchen"]
position = Vector2(-59, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kitchen/FridgeCollision"]
shape = SubResource("RectangleShape2D_fridge")

[node name="Sofa" type="Node2D" parent="."]
position = Vector2(380, 150)

[node name="SofaBack" type="ColorRect" parent="Sofa"]
offset_left = -30.0
offset_top = -35.0
offset_right = 30.0
offset_bottom = 35.0
color = Color(0.45, 0.35, 0.5, 1)

[node name="SofaSeat" type="ColorRect" parent="Sofa"]
offset_left = -26.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 30.0
color = Color(0.55, 0.45, 0.6, 1)

[node name="SofaCushion1" type="ColorRect" parent="Sofa"]
offset_left = -22.0
offset_top = -20.0
offset_right = -4.0
offset_bottom = 5.0
color = Color(0.6, 0.5, 0.65, 1)

[node name="SofaCushion2" type="ColorRect" parent="Sofa"]
offset_left = 0.0
offset_top = -20.0
offset_right = 18.0
offset_bottom = 5.0
color = Color(0.6, 0.5, 0.65, 1)

[node name="SofaArmLeft" type="ColorRect" parent="Sofa"]
offset_left = -30.0
offset_top = -30.0
offset_right = -24.0
offset_bottom = 32.0
color = Color(0.4, 0.3, 0.45, 1)

[node name="SofaCollision" type="StaticBody2D" parent="Sofa"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sofa/SofaCollision"]
shape = SubResource("RectangleShape2D_sofa")

[node name="Table" type="Node2D" parent="."]
position = Vector2(200, 140)

[node name="TableTop" type="ColorRect" parent="Table"]
offset_left = -45.0
offset_top = -25.0
offset_right = 45.0
offset_bottom = 25.0
color = Color(0.5, 0.35, 0.25, 1)

[node name="TableSurface" type="ColorRect" parent="Table"]
offset_left = -42.0
offset_top = -22.0
offset_right = 42.0
offset_bottom = 22.0
color = Color(0.55, 0.4, 0.3, 1)

[node name="TableCollision" type="StaticBody2D" parent="Table"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table/TableCollision"]
shape = SubResource("RectangleShape2D_table")

[node name="Chair1" type="Node2D" parent="."]
position = Vector2(140, 140)

[node name="ChairSeat" type="ColorRect" parent="Chair1"]
offset_left = -12.0
offset_top = -10.0
offset_right = 12.0
offset_bottom = 10.0
color = Color(0.5, 0.35, 0.25, 1)

[node name="ChairBack" type="ColorRect" parent="Chair1"]
offset_left = -12.0
offset_top = -18.0
offset_right = -8.0
offset_bottom = 10.0
color = Color(0.45, 0.3, 0.2, 1)

[node name="ChairCollision" type="StaticBody2D" parent="Chair1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair1/ChairCollision"]
shape = SubResource("RectangleShape2D_chair")

[node name="Chair2" type="Node2D" parent="."]
position = Vector2(260, 140)

[node name="ChairSeat" type="ColorRect" parent="Chair2"]
offset_left = -12.0
offset_top = -10.0
offset_right = 12.0
offset_bottom = 10.0
color = Color(0.5, 0.35, 0.25, 1)

[node name="ChairBack" type="ColorRect" parent="Chair2"]
offset_left = 8.0
offset_top = -18.0
offset_right = 12.0
offset_bottom = 10.0
color = Color(0.45, 0.3, 0.2, 1)

[node name="ChairCollision" type="StaticBody2D" parent="Chair2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair2/ChairCollision"]
shape = SubResource("RectangleShape2D_chair")

[node name="Chair3" type="Node2D" parent="."]
position = Vector2(200, 100)

[node name="ChairSeat" type="ColorRect" parent="Chair3"]
offset_left = -12.0
offset_top = -10.0
offset_right = 12.0
offset_bottom = 10.0
color = Color(0.5, 0.35, 0.25, 1)

[node name="ChairBack" type="ColorRect" parent="Chair3"]
offset_left = -12.0
offset_top = -18.0
offset_right = 12.0
offset_bottom = -14.0
color = Color(0.45, 0.3, 0.2, 1)

[node name="ChairCollision" type="StaticBody2D" parent="Chair3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair3/ChairCollision"]
shape = SubResource("RectangleShape2D_chair")

[node name="Chair4" type="Node2D" parent="."]
position = Vector2(200, 180)

[node name="ChairSeat" type="ColorRect" parent="Chair4"]
offset_left = -12.0
offset_top = -10.0
offset_right = 12.0
offset_bottom = 10.0
color = Color(0.5, 0.35, 0.25, 1)

[node name="ChairBack" type="ColorRect" parent="Chair4"]
offset_left = -12.0
offset_top = 6.0
offset_right = 12.0
offset_bottom = 10.0
color = Color(0.45, 0.3, 0.2, 1)

[node name="ChairCollision" type="StaticBody2D" parent="Chair4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair4/ChairCollision"]
shape = SubResource("RectangleShape2D_chair")

[node name="Rug" type="ColorRect" parent="."]
offset_left = 310.0
offset_top = 200.0
offset_right = 410.0
offset_bottom = 260.0
color = Color(0.6, 0.3, 0.3, 1)

[node name="RugPattern" type="ColorRect" parent="Rug"]
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 55.0
color = Color(0.7, 0.4, 0.35, 1)

[node name="Door" type="Area2D" parent="." groups=["interactable"]]
position = Vector2(213, 282)
collision_layer = 32

[node name="DoorFrame" type="ColorRect" parent="Door"]
offset_left = -35.0
offset_top = -8.0
offset_right = 35.0
offset_bottom = 8.0
color = Color(0.35, 0.25, 0.15, 1)

[node name="DoorMat" type="ColorRect" parent="Door"]
offset_left = -30.0
offset_top = -12.0
offset_right = 30.0
offset_bottom = -6.0
color = Color(0.5, 0.35, 0.25, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
shape = SubResource("RectangleShape2D_door")

[node name="FoodBowl" type="Area2D" parent="." groups=["interactable"]]
position = Vector2(50, 250)
collision_layer = 32

[node name="Bowl" type="ColorRect" parent="FoodBowl"]
offset_left = -18.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = 10.0
color = Color(0.7, 0.5, 0.35, 1)

[node name="BowlInner" type="ColorRect" parent="FoodBowl"]
offset_left = -14.0
offset_top = -4.0
offset_right = 14.0
offset_bottom = 6.0
color = Color(0.8, 0.6, 0.4, 1)

[node name="Food" type="ColorRect" parent="FoodBowl"]
offset_left = -10.0
offset_top = -2.0
offset_right = 10.0
offset_bottom = 4.0
color = Color(0.55, 0.35, 0.2, 1)

[node name="Label" type="Label" parent="FoodBowl"]
offset_left = -20.0
offset_top = 12.0
offset_right = 20.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 9
text = "Food"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodBowl"]
shape = SubResource("RectangleShape2D_food")

[node name="CharlieBasket" type="Area2D" parent="." groups=["interactable"]]
position = Vector2(360, 230)
collision_layer = 32

[node name="BasketOuter" type="ColorRect" parent="CharlieBasket"]
offset_left = -32.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = 20.0
color = Color(0.6, 0.45, 0.3, 1)

[node name="BasketRim" type="ColorRect" parent="CharlieBasket"]
offset_left = -32.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = -14.0
color = Color(0.5, 0.35, 0.2, 1)

[node name="BasketInner" type="ColorRect" parent="CharlieBasket"]
offset_left = -26.0
offset_top = -14.0
offset_right = 26.0
offset_bottom = 14.0
color = Color(0.7, 0.55, 0.4, 1)

[node name="Cushion" type="ColorRect" parent="CharlieBasket"]
offset_left = -22.0
offset_top = -10.0
offset_right = 22.0
offset_bottom = 10.0
color = Color(0.8, 0.7, 0.6, 1)

[node name="Label" type="Label" parent="CharlieBasket"]
offset_left = -30.0
offset_top = 22.0
offset_right = 30.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 9
text = "Basket"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharlieBasket"]
shape = SubResource("RectangleShape2D_bed")

[node name="BasketCollision" type="StaticBody2D" parent="CharlieBasket"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharlieBasket/BasketCollision"]
shape = SubResource("RectangleShape2D_basket")

[node name="PetBed" type="Area2D" parent="." groups=["interactable"]]
position = Vector2(60, 80)
collision_layer = 32

[node name="BedOuter" type="ColorRect" parent="PetBed"]
offset_left = -28.0
offset_top = -16.0
offset_right = 28.0
offset_bottom = 16.0
color = Color(0.5, 0.35, 0.45, 1)

[node name="BedInner" type="ColorRect" parent="PetBed"]
offset_left = -22.0
offset_top = -10.0
offset_right = 22.0
offset_bottom = 10.0
color = Color(0.65, 0.45, 0.55, 1)

[node name="Cushion" type="ColorRect" parent="PetBed"]
offset_left = -18.0
offset_top = -6.0
offset_right = 18.0
offset_bottom = 6.0
color = Color(0.75, 0.55, 0.65, 1)

[node name="Label" type="Label" parent="PetBed"]
offset_left = -24.0
offset_top = 18.0
offset_right = 24.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 9
text = "Pet"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PetBed"]
shape = SubResource("RectangleShape2D_bed")

[node name="Ball" type="Area2D" parent="." groups=["interactable"]]
position = Vector2(300, 200)
collision_layer = 32
script = ExtResource("5_ball")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Ball"]
sprite_frames = SubResource("SpriteFrames_ball")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_ball")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(213, 230)
collision_layer = 2
collision_mask = 1
script = ExtResource("2_player")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
sprite_frames = ExtResource("11_player_frames")
animation = &"idle_down"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_player")

[node name="InteractionArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_top = 0
limit_right = 426
limit_bottom = 290

[node name="Charlie" type="CharacterBody2D" parent="."]
position = Vector2(300, 170)
collision_layer = 4
collision_mask = 1
script = ExtResource("3_charlie")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Charlie"]
texture_filter = 1
sprite_frames = ExtResource("10_charlie_frames")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Charlie"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_charlie")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_hud")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
offset_right = 120.0
offset_bottom = 80.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BondingLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Bonding"

[node name="BondingBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="EntertainmentLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Entertainment"

[node name="EntertainmentBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="TimeLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "8:00 AM"

[node name="InteractionPrompt" type="Label" parent="HUD"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "[E] Interact"
horizontal_alignment = 1

[node name="MessagePanel" type="Panel" parent="HUD"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="MessageLabel" type="Label" parent="HUD/MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = -5.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
